gitlab/gitlab-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    name: gitlab
spec:
  type: LoadBalancer
  selector:
    name: gitlab
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30221
    - name: ssh
      port: 22
      targetPort: ssh
