gitlab/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/issuer: "letsencrypt-staging"
spec:  
  tls:
     - hosts:
       - gitlab-test.ptdev.tk
       secretName:  tls-gitlab-cert
  rules:
    - host: gitlab-test.ptdev.tk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitlab
              port:
                number: 80
